--- a/CSS/types/style-base v1.1 (Black).css
+++ b/CSS/types/style-base v1.1 (Black).css
@@ -3,11 +3,11 @@
     margin: 0;
     padding: 0;
     font-family: Helvetica, sans-serif;
-    color: white;
+    color: black;
     border: none;
 }
 body {
-    background-color: white;
+    background-color: black;
 }
 .header {
     color: #039f00;
@@ -44,7 +44,7 @@ a{
     border-color: #039f00;
 }
 .header a{
-    background-color: white;
+    background-color: black;
     color: #039f00;
 }
 .here {
@@ -55,17 +55,20 @@ a{
 .background {
     height: 700px;
     padding: 5vh;
-    background-image: linear-gradient( white, #039f00);
+    background-image: linear-gradient( black, #039f00);
     background-size: cover;
 }
 
 .footer {
-    background-color: #039f00;
+    background-color: black;
     height: 100px;
     display: flex;
 }
-
 .footer .container{
     display: flex;
     justify-content: center;
+}
+
+.footer .container p {
+    color: #039f00;
 }
