--- a/site/public/css/style-base.css
+++ b/site/public/css/style-base.css
@@ -19,6 +19,7 @@ body {
 .header .container{
     display: flex;
     justify-content: space-between;
+    flex-direction: row;
 }
 h1 {
     margin-top: 20px;
@@ -53,13 +54,11 @@ a{
     border-bottom: #039f00 2px solid;
 }
 .background {
-    height: 1360px;
+    height: 700px;
     padding: 5vh;
     background-image: linear-gradient( white, #039f00);
     background-size: cover;
-    margin-bottom: 0;
 }
-
 
 .footer {
     background-color: #039f00;
