--- a/site/public/css/style-contact.css
+++ b/site/public/css/style-contact.css
@@ -1,13 +1,31 @@
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: Helvetica, sans-serif;
+    color: white;
+    border: none;
+}
 
-input, label{
+.contact {
+    background-color:  #039f00;
+    background-size: cover;
+    height: 670px;
+    display: flex;
+}
+.contact {
+    display: flex;
+    justify-content: center;
+}
+
+.contact input, label{
     display: block;
     width: 100%;
 }
-input:focus, label:focus {
+.contact input:focus, label:focus {
     outline: none;
 }
-.box {
-    margin-top: 50px;
+.contact .box {
     width: 500px;
     margin-left: auto;
     margin-right: auto;
@@ -17,7 +35,7 @@ input:focus, label:focus {
     border-bottom: solid 3px #23272a;
     border-right: solid 3px #23272a;
 }
-h2 {
+.contact h2 {
     text-align: center;
     margin-bottom: 25px;
     font-size: 1.6rem;
@@ -28,14 +46,14 @@ form {
     flex-wrap: wrap;
     justify-content: space-between;
 }
-.full-box {
+.contact .full-box {
     flex: 1 1 100%;
     position: relative;
 }
-.half-box {
+.contact .half-box {
     flex: 1 1 45%;
 }
-.spacing {
+.contact .spacing {
     margin-right: 2.5%;
 }
 label {
@@ -43,33 +61,43 @@ label {
     font-size: .8rem;
     color: 	#ffffff;
 }
-input {
+.contact input {
     border-bottom: solid 2px #23272a;
     padding: 10px;
     font-size: .9rem;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
     color: 	#ffffff;
     background-color: rgb(43,47,52,80%);
     border-radius: 4px;
 }
-.box input:focus {
+.contact .box input:focus {
     border-color: #039f00;
 }
-.box input[type="submit"]{
+.contact .box button{
+    display: block;
+    border-radius: 20px;
+    margin-top: 5px;
+    width: 100%;
+    height: 40px;
+    padding: 10px;
+    margin-top: 10px;
+    font-size: .9rem;
+    transition: 2s;
     background-color: #039f00;
     color: white;
     border: none;
     border-radius: 20px;
-    height: 40px;
     cursor: pointer;
 }
-a {
+.contact a {
     color: #039f00;
 }
-#agreement{
-    margin-right: 5px;
-}
-#agreement, #agreement-label {
-    display: inline-block;
-    width: auto;
+textarea {
+    border-bottom: solid 2px #23272a;
+    padding: 10px;
+    font-size: .9rem;
+    margin-bottom: 30px;
+    color: 	#ffffff;
+    background-color: rgb(43,47,52,80%);
+    border-radius: 4px;
 }
