--- a/site/public/css/style-cadastro.css
+++ b/site/public/css/style-cadastro.css
@@ -18,18 +18,18 @@ select{
     margin-left: auto;
     margin-right: auto;
     border-radius: 10px;
-    background-color: rgb(43,47,52,90%);
+    background-color: rgba(255, 255, 255, 0.9);
     padding: 25px;
-    border-bottom: solid 3px #23272a;
-    border-right: solid 3px #23272a;
+    border-bottom: solid 3px #4884b3;
+    border-right: solid 3px #639cc7;
 }
 h2 {
     text-align: center;
     margin-bottom: 25px;
     font-size: 1.6rem;
-    color: 	#ffffff;
+    color: 	#1C66A6;
 }
-form {
+.register {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -47,19 +47,19 @@ form {
 label {
     font-weight: bold;
     font-size: .8rem;
-    color: 	#ffffff;
+    color: 	#1C66A6;
 }
 input {
-    border-bottom: solid 2px #23272a;
+    border-bottom: solid 2px #87a3b8;
     padding: 10px;
     font-size: .9rem;
     margin-bottom: 40px;
-    color: 	#ffffff;
-    background-color: rgb(43,47,52,80%);
+    color: 	#000000;
+    background-color: rgba(177, 194, 214, 0.8);
     border-radius: 4px;
 }
 .box input:focus {
-    border-color: #1C66A6;
+    border-color:  #1C66A6;
 }
 .box button{
     display: block;
@@ -81,12 +81,12 @@ a {
     color: #1C66A6;
 }
 select {
-    border-bottom: solid 2px #23272a;
+    border-bottom: solid 2px #87a3b8;
     padding: 10px;
     font-size: .9rem;
     margin-bottom: 40px;
-    color: rgb(128, 128, 128);
-    background-color: rgb(43,47,52,80%);
+    color: #1C66A6;
+    background-color: rgba(177, 194, 214, 0.8);
     border-radius: 4px
 }
 
@@ -98,3 +98,53 @@ select {
     display: inline-block;
     width: auto;
 }
+
+.full-box h5 a {
+    color: black;
+    border-bottom: solid 1px #000000;
+}
+
+.full-box h5 {
+    display: flex;
+    color: #1C66A6;
+    margin-bottom: 20px;
+    margin-top: -20px;
+    justify-content: center;
+}
+
+.full-box a {
+    border-bottom: solid 1px #1C66A6;
+}
+
+.loading-div {
+    width: 50px;
+    margin: auto;
+    display: none;
+  }
+  
+  .loading-div img {
+    height: 50px;
+    width: 50px;
+  }
+  .alerta_erro{
+    display: flex;
+    justify-content: flex-end;
+  }
+  
+  .card_erro {
+    display: none;
+    background-color: #fff;
+    color: black;
+    width: 230px;
+    position: fixed;
+    border-radius: 4px;
+    border: #1C66A6 3px solid;
+    padding: 10px;
+    margin-right: 10%;
+  }
+  
+  .card_erro #mensagem_erro{
+    color: black;
+    font-weight: 500;
+    font-size: 20px;
+  }
