--- a/site/public/css/style-simulador.css
+++ b/site/public/css/style-simulador.css
@@ -7,7 +7,6 @@
 }
 
 .full-box{
-margin-top: 30px;
 width: 500px;
 height: 400px; 
 background-color: rgba(255, 255, 255, 0.9);
@@ -68,8 +67,7 @@ button{
 }
 .show-box{
     padding: 25px;
-    width: 490px;
-    height: 440px;
+    width: auto;
     background-color: rgba(255, 255, 255, 0.9);
     display: flex;
     display: none;
@@ -88,7 +86,7 @@ button{
 
 .texto-resposta h2 {
     border-bottom: 10px;
-    color: rgb(45, 250, 4);
+    color: #1C66A6;
     font-size: 1.6rem;
 
 }
